Fixed the Copyright alignment issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,23 +35,28 @@ h3 {
   margin: 20px;
 }
 footer {
+  display: flex;
+  align-items: center;
   align-self: auto;
   background-color: teal;
-  height: 25px;
+  height: 75px;
   border-top: 2px solid black;
-  padding-bottom: 50px;
   position: fixed;
   bottom: 20px;
-  width: 100%;
+  width: 960px;
+  /* margin: 0 auto; */
+  left: 50%;
+  transform: translate(-50%);
 }
 footer p {
-  text-align: center;
+  /* text-align: center; */
   color: gainsboro;
   padding-top: 40px;
+  display: inline;
 }
 
 p {
-  text-align: center;
+  /* text-align: center; */
   /* float: right; */
   display: flex;
 }
@@ -59,6 +64,7 @@ p {
 .container {
   width: 960px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .container nav ul li {
@@ -75,7 +81,7 @@ p {
 
 .container nav ul li a:after {
   display: inline;
-  margin-left: 20px;
+  margin-left: 25px;
   content: "|";
 }
 
